--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -14543,7 +14543,7 @@ of Diablo Canyon},
 	date = {2019-12},
 	eprinttype = {arxiv},
 	eprint = {1801.03400},
-	keywords = {Computer Science - Social and Information Networks, Physics - Data Analysis, Statistics and Probability, Physics - Physics and Society, Quantitative Biology - Molecular Networks, Statistics - Applications},
+	keywords = {Computer Science - Social and Information Networks, Physics - Physics and Society, Physics - Data Analysis, Statistics and Probability, Quantitative Biology - Molecular Networks, Statistics - Applications},
 	file = {arXiv Fulltext PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/D4R9V7VX/Broido and Clauset - 2019 - Scale-free networks are rare.pdf:application/pdf;arXiv.org Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/G9TQRXCW/1801.html:text/html},
 }
 
@@ -20815,4 +20815,32 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	date = {2010},
 	langid = {english},
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/FLYJFZFM/747-ge-vernova-ge-2.html:text/html},
+}
+
+@article{huangfu_parallelizing_2018,
+	title = {Parallelizing the dual revised simplex method},
+	volume = {10},
+	issn = {1867-2949, 1867-2957},
+	url = {http://link.springer.com/10.1007/s12532-017-0130-5},
+	doi = {10.1007/s12532-017-0130-5},
+	pages = {119--142},
+	number = {1},
+	journaltitle = {Mathematical Programming Computation},
+	shortjournal = {Math. Prog. Comp.},
+	author = {Huangfu, Q. and Hall, J. A. J.},
+	urldate = {2025-07-01},
+	date = {2018-03},
+	langid = {english},
+	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RPYMU6TV/Huangfu and Hall - 2018 - Parallelizing the dual revised simplex method.pdf:application/pdf},
+}
+
+@legislation{illinois_83rd_general_assembly_citizens_1983,
+	title = {Citizens Utility Board Act},
+	url = {https://www.ilga.gov/Legislation/ILCS/Articles?ActID=1278&ChapterID=23&Print=True},
+	number = {83-945},
+	author = {{Illinois 83rd General Assembly}},
+	urldate = {2025-07-11},
+	date = {1983},
+	langid = {english},
+	file = {-:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/7U426NJ6/Articles.html:text/html},
 }
