--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -51,11 +51,10 @@ What are some relevant papers in the literature?
     model results'' \cite{susser_better_2022}?
 \end{enumerate}
 
-\textcolor{red}{Is the hypothesis I am testing with this study that 
-``municipalities would be better equipped to plan and design their 
-energy systems if the available modeling tools were accessible and 
-relevant.'' This hypothesis comes from the implicit suppositions in a few papers.
-}
+\textcolor{red}{Is the hypothesis I am testing with this study that
+``municipalities would be better equipped to plan and design their energy
+systems if the available modeling tools were accessible and relevant.'' This
+hypothesis comes from the implicit suppositions in a few papers. }
 
 \textcolor{red}{What are some of the novelties of this study}
 \begin{enumerate}
@@ -93,9 +92,9 @@ screenshot of the Whisper interface.
 \end{figure}
 
 
-The interview coding step was also
-performed locally with the \texttt{Taguette} tool \cite{rampin_taguette_2021}.
-Figure \ref{fig:taguette} shows a screenshot of the \texttt{Taguette} software.
+The interview coding step was also performed locally with the \texttt{Taguette}
+tool \cite{rampin_taguette_2021}. Figure \ref{fig:taguette} shows a screenshot
+of the \texttt{Taguette} software.
 
 \begin{figure}[htbp!]
     \centering
@@ -141,7 +140,14 @@ Illinois is split between two \acp{rto}, MISO and PJM.
     \item \ac{icc}
     \item \ac{ipa}
     \item \ac{icea}
-    \item Illinois \ac{cub}
+    \item \ac{imea}
+    \item Illinois \ac{cub} --- the Illinois \ac{cub} formed in 1983 after
+    Illinois passed the Citizen's Utility Board Act
+    \cite{illinois_83rd_general_assembly_citizens_1983}. The \ac{cub} is a nonpartisan organization that
+    educates consumers and advocates for public health and affordable utilities at the \ac{icc}. Indeed,
+    the \ac{cub} Act afforded the orgnanization regulatory standing which allows them to introduce bills
+    at the regulatory level. \ac{cub} also intervenes at the municipal level in front of city councils.
+    Particularly those with municipally-owned utilities, such as Naperville, Illinois.
 \end{enumerate}
 
 
@@ -225,7 +231,35 @@ This section answers the following questions
     Prairie coal plant.
 \end{enumerate}
 
+\section{Aim 1: Energy planning and the use of models}
 
+
+\section{Aim 2: Considerations of justice in energy planning}
+
+At both the state and municipal levels, energy justice considerations are 
+driven primarily by advocacy groups, such as \ac{cub} and \ac{nest}, lobbying 
+for its inclusion in policy. 
+
+[... include quotes here ]
+
+Although several practitioners expressed interest in energy justice and related
+concepts, institutions such as the \ac{ipa} and municipal governments have specific
+staff dedicated to equity and justice. \textcolor{red}{[... share examples and quotes
+here ...]}. 
+
+[... How do the interviewees feel about this separation and /or energy justice in general? ]
+
+Despite tension, advocacy groups in Illinois gained some significant ground with \ac{ceja}'s
+passage in 2021. 
+
+\begin{quotation}
+    We have to incorporate into law, not just affordability, but environmental justice, utility justice,
+    utility democracy, all of these other concepts. And you know, did we get a law that properly focused
+    all those things? Definitely not. But it did introduce these concepts into Illinois in, I think, a
+    pretty significant way.
+\end{quotation}
+
+\section{Aim 3: \ac{osier}'s planning potential}
 
 % This chapter addresses my proposal to ``validate'' \ac{osier} by conducting a
 % case study of energy planning processes in Champaign-Urbana through interviews
