--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -98,5 +98,6 @@
 \acro{doe}[DOE]{Department of Energy}
 \acro{lcoe}[LCOE]{levelized cost of electricity}
 \acro{ai}[AI]{artificial intelligence}
+\acro{ceja}[CEJA]{Climate and Equitable Jobs Act}
 
 
