--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -99,5 +99,10 @@
 \acro{lcoe}[LCOE]{levelized cost of electricity}
 \acro{ai}[AI]{artificial intelligence}
 \acro{ceja}[CEJA]{Climate and Equitable Jobs Act}
+\acro{iou}[IOU]{investor-owned utility}
+\acrodefplural{iou}[IOUs]{investor-owned utilities}
+\acro{pjm}[PJM]{PJM Interconnection}
+\acro{miso}[MISO]{Midcontinent Indenpendent System Operator}
+\acro{btm}[BTM]{behind-the-meter}
 
 
