--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20844,3 +20844,38 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	langid = {english},
 	file = {-:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/7U426NJ6/Articles.html:text/html},
 }
+
+@online{state_of_illinois_electric_2025,
+	title = {Electric Choice Basics},
+	url = {https://plugin.illinois.gov/electric-choice-basics.html},
+	abstract = {Your electricity service is made up of three parts: (1) the electricity itself is provided by an electricity generator and is sometimes referred to as electricity "supply" or "generation", (2) the "transmission" of that electricity from the generation facility to your local utility, and (3) the "distribution" or "delivery" of the electricity by the utility over the electric lines that lead to your business or home},
+	titleaddon = {Plug In Illinois},
+	type = {Government},
+	author = {{State of Illinois}},
+	urldate = {2025-07-13},
+	date = {2025},
+	langid = {english},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/BIAKHDJ3/electric-choice-basics.html:text/html},
+}
+
+@report{illinois_power_agency_electricity_2025,
+	location = {Springfield, Illinois},
+	title = {Electricity Procurement Plan: 2025 Plan},
+	url = {https://ipa.illinois.gov/content/dam/soi/en/web/ipa/documents/20250124-2025-electricity-procurement-plan.pdf},
+	pages = {122},
+	institution = {Illinois Power Agency},
+	author = {{Illinois Power Agency}},
+	urldate = {2025-07-13},
+	date = {2025-01},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2L39RJNR/20250124-2025-electricity-procurement-plan.pdf:application/pdf},
+}
+
+@legislation{illinois_90th_general_assembly_electric_1997,
+	title = {Electric Service Customer Choice and Rate Relief Law of 1997},
+	url = {https://ilga.gov/legislation/ILCS/details?MajorTopic=&Chapter=&ActName=Public%20Utilities%20Act.&ActID=1277&ChapterID=23&SeqStart=&&ChapAct=FullText&Print=True},
+	author = {{Illinois 90th General Assembly}},
+	urldate = {2025-07-13},
+	date = {1997},
+	file = {FullText Public Utilities Act.:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5GNK7LNK/details.html:text/html},
+}
