--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -251,7 +251,8 @@ Illinois is split between two \acp{rto}, MISO and PJM.
     municipally-owned utilities, such as Naperville, Illinois.
 \end{enumerate}
 
-
+\textcolor{red}{Talk about the \ac{ceja} bill --- its emissions targets, scheduled plant retirements,
+how it incorporates justice and equity, etc.}
 
 \begin{table}[htbp!]
     \centering
