updates climate plan descriptions

--- a/docs/2-literature/25-energy-justice.tex
+++ b/docs/2-literature/25-energy-justice.tex
@@ -1,7 +1,7 @@
 % \noindent\hrulefill \textcolor{red}{Subsubsection: Energy justice and the
 % Boundaries of Energy Systems.}
 \section{Energy Justice}
-
+\label{section:energy-justice}
 % \item What is energy justice?
 
 
