--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20879,3 +20879,27 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	date = {1997},
 	file = {FullText Public Utilities Act.:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5GNK7LNK/details.html:text/html},
 }
+
+@misc{mjolness_city_2025,
+	title = {City of Naperville Sustainability Workplan 2025},
+	url = {https://www.naperville.il.us/globalassets/media/sustainability/city-of-naperville-sustainability-workplan-070325.pdf},
+	publisher = {City of Naperville},
+	author = {Mjolness, Ben},
+	urldate = {2025-07-15},
+	date = {2025},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/UPHIPJQP/city-of-naperville-sustainability-workplan-070325.pdf:application/pdf},
+}
+
+@report{trendler_sustainable_2021,
+	location = {Naperville, {IL}},
+	title = {Sustainable Naperville 2036},
+	url = {https://drive.google.com/file/d/1O5Xa9h-lC4-RRQr_nWmy5795Yap37KSe/preview?usp=embed_facebook},
+	pages = {294},
+	institution = {Naperville Environment and Sustainability Task Force},
+	author = {Trendler, Jodi},
+	urldate = {2025-07-15},
+	date = {2021-09-08},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/HLTDXGAY/Sustainable Naperville 2036 Report 08092021.pdf.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/LBPF78KF/preview.html:text/html},
+}
