--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -251,8 +251,8 @@ Illinois is split between two \acp{rto}, MISO and PJM.
     municipally-owned utilities, such as Naperville, Illinois.
 \end{enumerate}
 
-\textcolor{red}{Talk about the \ac{ceja} bill --- its emissions targets, scheduled plant retirements,
-how it incorporates justice and equity, etc.}
+\textcolor{red}{Talk about the \ac{ceja} bill --- its emissions targets,
+scheduled plant retirements, how it incorporates justice and equity, etc.}
 
 \begin{table}[htbp!]
     \centering
@@ -307,26 +307,58 @@ and gas distribution for the campus.
 
 \ac{uiuc} published three climate action plans called \ac{icap}. The most recent
 \ac{icap} was published in 2020
-\cite{institute_for_sustainability_energy_and_environment_illinois_2020}. This climate
-action plan commits \ac{uiuc} to achieving net-zero campus emissions from all energy 
-sectors by 2050 through a mix of new clean energy resources and energy efficiency 
-measures. Figure \ref{fig:uiuc-emissions} shows the current progress,
-as of 2023, and the ultimate trajectory of this net-zero goal. The \ac{icap} also covers
-broader sustainability targets related to water use, recycling, and clean transportation.
-
-\textcolor{red}{What does \ac{icap} say about justice, equity, or sustainability?}
-
-
-\begin{figure}
+\cite{institute_for_sustainability_energy_and_environment_illinois_2020}. This
+climate action plan commits \ac{uiuc} to achieving net-zero campus emissions
+from all energy sectors by 2050 through a mix of new clean energy resources and
+energy efficiency measures. Figure \ref{fig:uiuc-emissions} shows the current
+progress, as of 2023, and the ultimate trajectory of this net-zero goal. The
+\ac{icap} also covers broader sustainability targets related to water use,
+recycling, and clean transportation. 
+\begin{figure}[ht!]
     \centering
     \resizebox{0.75\columnwidth}{!}{\input{figures/07_interview_chapter/uiuc_emissions_plot.pgf}}
     \caption{Annual emissions and targets at \ac{uiuc} from 2008 to 2050.}
     \label{fig:uiuc-emissions}
 \end{figure}
+The \ac{icap} defines sustainability as ``meeting the needs of the present
+without compromising the ability of future generations to meet their own
+needs.'' This definition is consistent with the concept of intergenerational
+equity, an aspect of distribution justice, described in Section
+\ref{section:energy-justice}. Further, the report outlines an objective to
+``develop a comprehensive environmental justice plan'' that focuses on
+historically marginalized and underserved communities. This objective
+demonstrates some consideration for recognition justice as well.
+
 
 \subsection{Naperville, Illinois}
-Naperville is interesting because it owns the distribution utility that serves
-electricity but does not own any generation.
+Naperville is an affluent suburb of Chicago, Illinois that straddles Will and
+DuPage counties. The city operates its own electric utility but does not own any
+bulk generation sources. Instead, Naperville contracts with the \ac{imea}
+organization to procure electricity for its residents. The Naperville city
+council offers two ``sustainability'' plans. First is the Sustainability
+Workplan, which is a brief document outlining the city's commitments
+\cite{mjolness_city_2025}. The Workplan has no quantified objectives nor
+timelines and its energy goals are restricted to efficiency improvements such as
+installing LED lights. Second, is a report authored by volunteers with the
+\acl{nest} entitled ``Sustainable Naperville 2036''
+\cite{trendler_sustainable_2021}. Although \ac{nest} is an advisory organization
+formed by the Naperville City Council, the targets outlined in this plan are not
+commitments set forth by the city council. The \ac{nest} report proposed
+strategies to limit Naperville's carbon emissions to 0.968 million metric tonnes
+of \ac{co2eq} by 2036 and achieving net-zero emissions by 2050. The primary
+means of reducing carbon emissions are expanding local energy generation and
+eliminating electricity supplied from the Prairie State Coal Plant --- a coal
+plant partially owned by \ac{imea} which procures electricity for its member
+communities, including Naperville. The 2036 report also identified ``energy
+equity'' as a sustainability objective. Although equity is not explicitly
+defined, the authors describe disproportionality and implore that
+\begin{quote}
+    \blockcquote[11]{trendler_sustainable_2021}{it is imperative that sustainability 
+    planning and actions pro-actively account for human and environmental  
+    impacts from emissions, pollution and natural resource destruction created 
+    by Naperville's energy purchases and  consumption --- beyond our immediate 
+    community boundaries as well as those created within.}
+\end{quote}
 \begin{enumerate}
     \item City of Naperville (Sustainability Department)
     \item \ac{nest}
@@ -363,6 +395,8 @@ Despite tension, advocacy groups in Illinois gained some significant ground with
     Definitely not. But it did introduce these concepts into Illinois in, I
     think, a pretty significant way.
 \end{quotation}
+
+% \block
 
 \section{Aim 3: \ac{osier}'s planning potential}
 
