updates examples chapter and addresses comments from @katyhuff

--- a/docs/tables/metric_categories.tex
+++ b/docs/tables/metric_categories.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ll}
     \toprule
-    Metrics & Criteria \\
+    Metric & Criteria \\
     \midrule
     % Waste management
      & Mass of \ac{snf} + \ac{hlw}\\
