--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -90,5 +90,6 @@
 \acro{doe}[DOE]{Department of Energy}
 \acro{lcoe}[LCOE]{levelized cost of electricity}
 \acro{ai}[AI]{artificial intelligence}
+\acro{eia}[EIA]{Energy Information Administration}
 
 
