--- a/docs/4-benchmark-results/43-explore.tex
+++ b/docs/4-benchmark-results/43-explore.tex
@@ -1,6 +1,6 @@
 \subsection{Exercise 5: Comparing against an established modeling framework}
 Since structural uncertainty persists regardless of the number of objectives
-used, it's important to check the near-optimal objective space for alternative
+used, it is important to check the near-optimal objective space for alternative
 solutions. In this benchmark exercise, I used \ac{temoa} to calculate the
 least-cost solution. Then I generated 30 alternative solutions with \ac{mga} as
 described in Section \ref{section:mga} with a 10\% slack variable added to
