--- a/docs/4-benchmark-results/42-decide-ea.tex
+++ b/docs/4-benchmark-results/42-decide-ea.tex
@@ -2,11 +2,11 @@
 
 \ac{osier} allows users to choose among a variety of \ac{moo} methods. This is
 motivated by the desire for flexibility. However, Exercises 5 and 6 use just one
-algorithm, \ac{unsga3} as implemented by \ac{pymoo}. Figure
+algorithm, \ac{unsga3} as implemented by \ac{pymoo} \cite{blank_pymoo_2020}. Figure
 \ref{fig:algorithm-comparison} justifies this choice by comparing the results of
 three \ac{moo} algorithms by showing the respective scatter plots and a density
 plot of the points on each axis. The three algorithms are \ac{nsga2},
-\ac{nsga3}, and \ac{unsga3}. The first two algorithms used the \ac{deap}
+\ac{nsga3}, and \ac{unsga3}. The first two algorithms used the \ac{deap} \cite{fortin_deap_2012}
 implementation to show the breadth \ac{osier}'s support for different tools.
 Since it took \ac{unsga3} 128 generations to converge, I also stopped the other
 two algorithms after 128 generations, before converging. The density plot above
