--- a/docs/4-benchmark-results/45-new-dispatch.tex
+++ b/docs/4-benchmark-results/45-new-dispatch.tex
@@ -8,14 +8,14 @@ curtail excess energy and both were required to meet demand at all time steps.
 Table \ref{tab:dispatch-results} summarizes the technologies available, the
 optimizer used, and the value of the objective function. 
 
-\begin{table}[htbp!]
+\begin{table}[ht!]
     \centering
     \caption{Summary results for the three dispatch test cases.}
     \label{tab:dispatch-results}
     \input{tables/algorithm_comparison_results_edited.tex}
 \end{table}
 
-\noindent
+% \noindent
 The first two cases in Table \ref{tab:dispatch-results} show perfect agreement between 
 the two algorithms. However, they disagree on the final case
 with a battery storage technology. Figure \ref{fig:dispatch-comparison} compares
@@ -27,9 +27,9 @@ algorithms dispatch the same amounts of wind and nuclear energy. However, the
 two algorithms differ in their usage of battery storage which causes further
 differences in the dispatch of natural gas and total curtailment.
 
-\begin{figure}
+\begin{figure}[ht!]
     \centering
-    \resizebox{0.75\columnwidth}{!}{\input{figures/04_benchmark_chapter/dispatch_comparison_plot_x2.pgf}}
+    \resizebox{0.95\columnwidth}{!}{\input{figures/04_benchmark_chapter/dispatch_comparison_plot_x2.pgf}}
     \caption{Comparison between dispatch results for two algorithms. Plot a) was
     calculated with a logical dispatch algorithm and plot b) was calculated with
     optimal dispatch.}
@@ -46,7 +46,7 @@ rule-based counterpart because it optimizes the entire time series at once.
 Since the logical algorithm uses battery storage imperfectly, it fills the
 energy gaps with natural gas and more energy is curtailed rather than used.
 Although, the optimal dispatch solution performs better on a pure cost basis, the
-myopia of the logical dispatch algorithm is possibly more ``realistic.''
+myopia of the logical dispatch algorithm is possibly more realistic.
 Further, since the logical dispatch algorithm does not have an energy balance
 constraint for all time steps, users can more easily estimate reliability and
 calculate costs from energy shortfalls.
@@ -56,7 +56,7 @@ calculate costs from energy shortfalls.
 
 \subsection{Exercise 2: Time Scaling}
 
-This exercise considers how the two dispatch algorithms scale with problem size.
+This exercise considers how the two dispatch algorithms scale with simulation duration.
 For this exercise, the two algorithms were placed within a
 \texttt{CapacityExpansion} problem with the parameters described in Table
 \ref{tab:scaling-ga-params}.
@@ -67,6 +67,8 @@ For this exercise, the two algorithms were placed within a
     \label{tab:scaling-ga-params}
     \begin{tabular}{ll}
         \toprule
+        Parameter & Value \\
+        \midrule
         Algorithm & \acs{nsga2}\\
         Termination Criterion & Maximum generations\\
         Generations & 10 \\
@@ -85,8 +87,7 @@ problem size more dramatically than the number of objectives or number of
 technologies. Further, scaling by population size would obfuscate the
 differences between the two algorithms since neither are affected by population
 size. Figure \ref{fig:alg-scaling} shows results of this scaling study. The
-x-axis measures the number of modeled days at an hourly resolution. Multiplying
-by 24 gives the total number of timesteps.
+x-axis measures the number of modeled days at an hourly resolution.
 
 \begin{figure}[htbp!]
     \centering
@@ -123,6 +124,8 @@ class whose parameters are described in Table \ref{tab:thread-scaling-params}.
     \label{tab:thread-scaling-params}
     \begin{tabular}{ll}
         \toprule
+        Parameter & Value \\
+        \midrule
         Algorithm & \acs{nsga2}\\
         Termination Criterion & Maximum Generations\\
         Generations & 10 \\
